# texttoSqlProject

./: .env.example  .gitignore  Dockerfile.lambda  build-base-image.sh  github-actions-policy.json  lambda_handler.py  pyproject.toml  requirements-test.txt  requirements.txt  s3-cache-policy.json  supabase_con_test.py
.github/workflows/: deploy.yml  test.yml
app/: config.py  logging_config.py  main.py  utils.py
app/services/: cache_service.py  docling_service.py  document_service.py  embedding_service.py  local_storage.py  query_cache_service.py  rag_service.py  router_service.py  s3_storage.py  sql_service.py  storage_backend.py  vector_service.py
notebooks/: vanna_ai_text_to_sql_complete.ipynb
notebooks/6b49ea1290ef6dc6/: query_results_14ab6b5f.csv  query_results_16f2c1c8.csv  query_results_1f2bf60c.csv  query_results_2591524e.csv  query_results_276f922d.csv  query_results_31c61685.csv  query_results_3459c969.csv  query_results_641f2848.csv  query_results_79099921.csv  query_results_85b49784.csv  query_results_ab07554c.csv  query_results_b1fca9ea.csv  query_results_b2809d7a.csv  query_results_bc454aed.csv  query_results_c8e378ce.csv  query_results_d69dc9ce.csv  query_results_f59ca148.csv
