[project]
name = "rag-text-to-sql"
version = "0.1.0"
description = "Multi-Source RAG + Text-to-SQL API"
readme = "README.md"
requires-python = ">=3.12"
# Full dependencies are in requirements.txt
# Install with: pip install -r requirements.txt
# Test-only dependencies: pip install -r requirements-test.txt
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.black]
target-version = ["py312"]
line-length = 88

[tool.ruff]
target-version = "py312"
line-length = 88
